# Genetic_Algorithm_demo

./: .gitignore  CMakeLists.txt  README.md  class_diagram.puml
src/: BinaryGenAlg.h  BinaryGenome.cpp  BinaryGenome.h  BinayGenAlg.cpp  GenAlgInterface.h  Simulation.cpp  Simulation.h  main.cpp  params.h
src/Agents/: Agent.h  BinaryBois.cpp  BinaryBois.h
src/Fitness/: Fitness.h  MostOnes.cpp  MostOnes.h  ValueOfString.cpp  ValueOfString.h
src/Genomes/: BinaryGenome.cpp  BinaryGenome.h  Genome.h
src/Logging/: CSVLogger.cpp  CSVLogger.h  Logger.h  Visitor.h
src/Logging/GernateGraphs/: graph_csv.py
src/Mutations/: Mutation.h  Recombination.cpp  Recombination.h
src/Reproduction/: LazyReproduction.cpp  LazyReproduction.h  Reproduction.h
src/Selection/: Roulette.cpp  Roulette.h  Selection.h  Truncation.cpp  Truncation.h
